# NEXUS

./: .gitignore  CMakeLists.txt  NEXUS_LANGUAGE_SPECIFICATION.md  README.md  hello.nx
compiler/ast/: AssignmentStatement.hpp  BinaryExpression.hpp  BlockStatement.hpp  BooleanLiteral.hpp  BreakStatement.hpp  CallExpression.hpp  ContinueStatement.hpp  Expression.hpp  ExpressionStatement.hpp  FloatLiteral.hpp  FunctionDeclaration.hpp  Identifier.hpp  IfStatement.hpp  IntegerLiteral.hpp  Node.hpp  NumberLiteral.hpp  Program.hpp  ReturnStatement.hpp  Statement.hpp  StringLiteral.hpp  VariableDeclaration.hpp  WhileStatement.hpp  literal.hpp
compiler/codegen/: CodeGenerator.cpp  CodeGenerator.hpp
compiler/ir/: IRBuilder.cpp  IRBuilder.hpp  IRModule.hpp  Instruction.hpp  Opcode.hpp
compiler/lexer/: KeywordTable.cpp  KeywordTable.hpp  Lexer.cpp  Lexer.hpp
compiler/parser/: Parser.cpp  Parser.hpp
compiler/semantic/: SemanticAnalyzer.cpp  SemanticAnalyzer.hpp  SymbolTable.hpp  Type.hpp
compiler/token/: Token.hpp  TokenStream.hpp  TokenType.hpp
compiler/type/: Type.hpp
compiler/unicode/: Unicode.cpp  Unicode.hpp
docs/: ast.md  bytecode.md  changelog.md  decisions.md  grammar.md  roadmap.md  vm.md
src/: main.cpp
tests/lexer/: test.cpp
tests/parser/: test.cpp
vm/: Bytecode.hpp  Instruction.hpp  Opcode.hpp  Value.cpp  Value.hpp  VirtualMachine.cpp  VirtualMachine.hpp
